[package]
name = "cargofmt"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for formatting manifest according to style guidelines."
categories = ["development-tools"]
edition = '2018'

[dependencies]
anyhow = "1.0.28"
clap = { version = "3.0.0-beta.1", features = ["derive"], git = "https://github.com/clap-rs/clap" }
derivative = "2.1.0"
env_logger = "0.7.1"
indexmap = { version = "1.3.2", features = ["serde-1"] }
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
serde = { version = "1.0.106", features = ["derive"] }
serde-diff = "0.3.0"
thiserror = "1.0.14"
toml = { version = "0.5.6", features = ["preserve_order"] }
# toml_edit = "0.1.5"
toml_edit = { git = "https://github.com/ordian/toml_edit" }
cargo_toml = "0.8.0"
derive_more = "0.99.5"

[dev-dependencies]
maplit = "1.0.2"