[package]
name = "cargofmt"
version = "0.2.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = '2018'
description = "A tool for formatting manifest according to style guidelines"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.31"
chrono = "0.4.11"
clap = { version = "3.0.0-beta.1", features = ["derive"] }
derivative = "2.1.1"
derive-new = "0.5"
derive_more = "0.99.7"
env_logger = "0.7.1"
erased-serde = "0.3.11"
format = "0.2.2"
indexmap = { version = "1.3.2", features = ["serde-1"] }
irrefutable = "0.1.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
optional-index = { version = "0.1.0", git = "https://github.com/kgv/optional-index" }
parse_int = "0.4.0"
pin-utils = "0.1.0"
regex = "1.3.9"
ron = "0.6.0"
serde = { version = "1.0.110", features = ["derive"] }
# serde-diff = "0.3.0"
serde-diff = { git = "https://github.com/crzysdrs/serde-diff" }
serde_json = "1.0.53"
thiserror = "1.0.19"
toml = { version = "0.5.6", features = ["preserve_order"] }
toml-lalrpop = { git = "https://github.com/kgv/toml-lalrpop" }

[dev-dependencies]
maplit = "1.0.2"