[package]
name = "cargofmt"
version = "0.2.1"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = '2018'
description = "A tool for formatting manifest according to style guidelines"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.31"
clap = { version = "3.0.0-beta.1", features = ["derive"] }
derivative = "2.1.1"
env_logger = "0.7.1"
erased-serde = "0.3.11"
indexmap = { version = "1.4.0", features = ["serde-1"] }
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
optional-index = { version = "0.1.0", git = "https://github.com/kgv/optional-index" }
ron = "0.6.0"
serde = { version = "1.0.111", features = ["derive"] }
# serde-diff = "0.3.0"
serde-diff = { git = "https://github.com/crzysdrs/serde-diff" }
serde_json = "1.0.53"
toml = { version = "0.5.6", features = ["preserve_order"] }
toml-lalrpop = { git = "https://github.com/kgv/toml-lalrpop" }

[features]
default = []
drain-filter = ["nightly", "toml-lalrpop/drain-filter"]
nightly = ["unstable"]
unstable = []